--- a/Login.css
+++ b/Login.css
@@ -46,6 +46,7 @@ body {
 }
 
 .navbar nav .login-signup {
+    margin-right: 100px;
     padding: 0.5rem 1rem;
     background: white;
     color: #3d52a0;
