--- a/webdev.css
+++ b/webdev.css
@@ -1,105 +1,135 @@
-body{
+/* General Body Styling */
+body { 
     background-color: #8697C4;
+    margin: 0;
+    font-family: Arial, sans-serif;
 }
-a{
+
+/* Header Styling */
+#header {
+    height: 60px;
+    width: 100%;
+    background-color: black;
+    border-radius: 10px;
+    padding: 10px 20px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+#Ecell {
+    font-size: 1.5rem;
+    color: white;
+    margin-right: auto;
+}
+
+a {
     text-decoration: none;
-    margin:15px;
-    color:white;
-    font-size:15px;
+    color: white;
+    font-size: 1rem;
+    margin: 0 15px;
 }
-.icons{
-    margin-right:35px;
+
+.icons {
+    margin-right: 35px;
 }
-#Ecell{
-    margin-right:750px;
+
+button a {
+    color: black;
+    font-size: 0.9rem;
 }
-button a{
-    color:black;
+
+/* Main Box Styling */
+#mainbx {
+    width: 400px;
+    margin: 120px auto 30px;
+    padding: 20px;
+    border-radius: 15px;
+    background-color: #ADBBDA;
+    box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.2);
 }
-#header{
-    height:25px;
-    width:98%;
+
+/* Tab Styling */
+#tabs {
+    display: flex;
+    justify-content: space-between;
+}
+
+#one, #two {
+    display: inline-block;
+    width: 50%;
+    text-align: center;
+    padding: 10px;
+    font-weight: bold;
+    color: #333;
+}
+
+#two button {
+    width: 100px;
     background-color: black;
-    border-radius:10px;
-    padding:10px;
-}
-#mainbx{
-    height:470px;
-    width:350px;
-    margin: auto;
-    /* border:1px solid black; */
-    margin-top:100px;
-    border-radius:15px;
-    background-color:#ADBBDA;
-}
-#one{
-    display:inline-block;
-    margin-top:10px;
-    width:170px;
-    height:30px;
-    text-align:center;
-    border-right:2px solid black;
+    color: white;
+    border-radius: 10px;
+    cursor: pointer;
 }
 
-#two{
-    display:inline-block;
-    margin-top:10px;
-    height:30px;
-    text-align:center;
-    width:170px;
-  
-}
-#two button{
-
-    width:100px;
-    background-color: black;
-    color:white;
-    border-radius:10px;
-    margin-top:2px;
-  
+/* Form Styling */
+form {
+    margin-top: 20px;
 }
 
-input{
-    margin:15px 150px 10px 50px;
-    border-radius:5px;
-    height:25px;
-    background-color:#EDE8F5;
-    /* box-shadow:1px 1px 3px black */
-}
-input:hover{
-    box-shadow:2px 2px 5px black;
-}
-label{
-    margin:15px 150px 10px 45px;
-
+label {
+    display: block;
+    margin: 10px 0 5px 5px;
+    font-weight: bold;
+    color: #333;
 }
 
-h1{
-    margin-left:40px;
+input {
+    width: 90%;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    background-color: #EDE8F5;
+    margin-bottom: 15px;
 }
-#login{
-    border-radius:15px;
-    width:200px;
-    height:30px;
-    margin-left:50px;
-    margin-bottom:15px;
-    background-color:#3D52A0;
-    color:white;
-    margin-top:15px;
-    /* box-shadow:1px 1px 3px black */
+
+input:hover {
+    box-shadow: 2px 2px 5px black;
 }
-#google{
-    border-radius:15px;
-    width:150px;
-    height:30px;
-    margin-left:75px;
-    color:#3D52A0;
-    /* box-shadow:1px 1px 3px black; */
-    background-color:#EDE8F5;
+
+/* Button Styling */
+#login {
+    width: 100%;
+    padding: 10px;
+    background-color: #3D52A0;
+    color: white;
+    border-radius: 15px;
+    border: none;
+    cursor: pointer;
+    margin-top: 10px;
+    font-size: 1rem;
 }
-#login:hover{
-    box-shadow:2px 2px 5px black;
+
+#google {
+    width: 100%;
+    padding: 10px;
+    background-color: #EDE8F5;
+    color: #3D52A0;
+    border-radius: 15px;
+    border: none;
+    cursor: pointer;
+    margin-top: 10px;
+    font-size: 1rem;
 }
-#google:hover{
-    box-shadow:2px 2px 5px black;
+
+#login:hover, #google:hover {
+    box-shadow: 2px 2px 5px black;
+}
+
+/* Heading */
+h1 {
+    text-align: center;
+    font-size: 1.5rem;
+    color: #3D52A0;
+    margin-bottom: 20px;
 }
