--- a/webdev.css
+++ b/webdev.css
@@ -1,20 +1,21 @@
 /* General Body Styling */
 body { 
-    background-color: #8697C4;
+    background-color: #f4f4f4;
     margin: 0;
     font-family: Arial, sans-serif;
 }
 
-/* Header Styling */
-#header {
-    height: 60px;
+
+ #header {
+    height: 40px;
     width: 100%;
-    background-color: black;
+    background-color: #2c3e50;
     border-radius: 10px;
     padding: 10px 20px;
     display: flex;
     align-items: center;
     justify-content: space-between;
+    
 }
 
 #Ecell {
@@ -37,15 +38,15 @@ a {
 button a {
     color: black;
     font-size: 0.9rem;
-}
+} 
 
 /* Main Box Styling */
 #mainbx {
-    width: 400px;
-    margin: 120px auto 30px;
+    width: 450px;
+    margin: 70px auto 30px;
     padding: 20px;
     border-radius: 15px;
-    background-color: #ADBBDA;
+    background-color: white;
     box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.2);
 }
 
@@ -89,7 +90,7 @@ input {
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 5px;
-    background-color: #EDE8F5;
+    background-color: white;
     margin-bottom: 15px;
 }
 
@@ -101,7 +102,7 @@ input:hover {
 #login {
     width: 100%;
     padding: 10px;
-    background-color: #3D52A0;
+    background-color:#2c3e50 ;
     color: white;
     border-radius: 15px;
     border: none;
@@ -113,12 +114,12 @@ input:hover {
 #google {
     width: 100%;
     padding: 10px;
-    background-color: #EDE8F5;
-    color: #3D52A0;
+    background-color: #2c3e50;
+    color: white;
     border-radius: 15px;
     border: none;
     cursor: pointer;
-    margin-top: 10px;
+    margin-top: 30px;
     font-size: 1rem;
 }
 
